# mmspa

./: .gitignore  DEV_COMMENTS.md  LICENSE  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  configure.scan  f_heap.c  f_heap.h  fooltest.c  libtool  mmspa.h  multimodal-bellmanford.c  multimodal-dijkstra.c  parser.c  parser.h  types_graph.h
bindings/python/: pymmspa4pg_module.c  pymmspa_module.c  setup.py
bindings/python/pymmspa4pg/: pymmspa4pg_module.c
bindings/ruby/: mmspa4pg_ffi.rb  multimodal_route_planner.rb  multimodal_two_q.rb  route_planner_controller.rb  routing_options.rb  routing_plan.rb  routing_plan_inferer.rb  routing_result.rb  switch_condition.rb  test_mmtq_script.rb
demo/c/: Makefile  fooltest-1.x.c  fooltest-2.x.c  fooltest.c  fooltest2_publictransit.c
demo/data/: sources.txt  targets.txt
demo/data/OSM/attributes/: vertexattr.txt
demo/data/OSM/edges/: car-edges.txt  cycle-edges.txt  foot-edges.txt  horse-edges.txt
demo/data/OSM/graphs/: car.txt  cycle.txt  foot.txt  horse.txt
demo/data/OSM/vertices/: car-vertices.txt  cycle-vertices.txt  foot-vertices.txt  horse-vertices.txt
demo/data/UM/attributes/: vertexattr.txt
demo/data/UM/edges/: car-edges.txt  foot-edges.txt  underground-edges.txt
demo/data/UM/graphs/: car.txt  foot.txt  underground.txt
demo/data/UM/vertices/: car-vertices.txt  foot-vertices.txt  underground-vertices.txt
demo/python/: benchmark.py  rundemo.py
include/: graphassembler.h  mmspa4pg.h  mmtwoq.h  modegraph.h  parser.h  pathinfo.h  routingplan.h  routingresult.h  types_graph.h
python-bindings/: pymmspa.c  setup.py
src/: Makefile  Makefile.am  Makefile.in  bf.c  dikf.c  f_heap.c  graphassember.c  graphassembler.c  mmspa.c  mmspa4pg.c  mmtwoq.c  multimodal-bellmanford.c  multimodal-dijkstra-target.c  multimodal-dijkstra.c  multimodal-twoq.c  parser.c  routingplan.c  routingresult.c
