AC_INIT([mmspa4pg], [1.0], [nudtlliu@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
LT_INIT([shared])
AM_PROG_AR
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CHECK_HEADERS([stdlib.h string.h libpq-fe.h])
AC_FUNC_MALLOC
AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_OUTPUT
